--- a/accounts-service/requirements.txt
+++ b/accounts-service/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.5
-Jinja2==3.1.4
-itsdangerous==2.0.1
-Werkzeug==2.2.2
+Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
+pytest==6.2.5
+markupsafe==2.0.1
+Jinja2==3.0.1
